--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,3 @@ body {
   font-family: sans-serif;
   background-color: rgba(0, 0, 0, 0.03);
 }
-
-main {
-  marigin: 0 auto;
-}
